[package]
name = "test-sdxl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"

clap = { version = "4.5.8", features = ["derive"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_plain = "1.0.2"
serde_json = "1.0.99"

image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.24.0", default-features = false }
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"

candle-core = { version = "0.6.0", git = "https://github.com/huggingface/candle.git"  }
candle-datasets = {version = "0.6.0", git = "https://github.com/huggingface/candle.git", optional=true}
candle-nn = {version =  "0.6.0",git = "https://github.com/huggingface/candle.git", optional=false}
candle-transformers = {version =  "0.6.0",git = "https://github.com/huggingface/candle.git",  optional=false}
candle-flash-attn = {version =  "0.6.0", git = "https://github.com/huggingface/candle.git", optional=true}
candle-onnx = {version =  "0.6.0",git = "https://github.com/huggingface/candle.git",  optional=true}

tokenizers = "0.20.0"
hf-hub = "0.3.2"

[build-dependencies]
bindgen_cuda = { version = "0.1.1", optional = true }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda"]
cudnn = ["candle-core/cudnn"]
